tests/snapshots/rename_all_camel_case@query.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
firstName=Jane&
lastName=Smith&
phoneNumber=555-1234&
emailAddress=jane@example.com
