tests/snapshots/rename_all_screaming_snake-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
FIELD_ONE=42&
FIELD_TWO=LOUD&
NESTED_FIELD=NESTED
