tests/snapshots/rename_all_screaming_snake@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
FIELD_ONE=42&
FIELD_TWO=LOUD&
NESTED_FIELD=NESTED
