tests/snapshots/rename_fields-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
firstName=John&
lastName=Doe&
user-id=12345
