tests/snapshots/rename_fields@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
firstName=John&
lastName=Doe&
user-id=12345
