tests/snapshots/rename_fields@query.snap
---
source: tests/test_roundtrip.rs
description: "RenameFields { first_name: \"John\", last_name: \"Doe\", user_id: 12345 }"
---
firstName=John&
lastName=Doe&
user-id=12345
