tests/snapshots/single_element_collections.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
single_vec[0]=single&
single_map[only]=42&
single_option[0]=255&
single_char_string=x
