tests/snapshots/single_element_collections@form.snap
---
source: tests/test_roundtrip.rs
description: "SingleElements { single_vec: [\"single\"], single_map: {\"only\": 42}, single_option: Some([255]), single_char_string: \"x\" }"
---
single_vec%5B0%5D=single&
single_map%5Bonly%5D=42&
single_option%5B0%5D=255&
single_char_string=x
